<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_control</name>
  <version>0.0.0</version>
  <description>Creating a simple package to control/process the turtlebot data</description>
  <maintainer email="srikanthschelbert2024@u.northwestern.edu">sags</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>nubot</exec_depend> -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <!-- <exec_depend>ros_launch</exec_depend> -->
  <exec_depend>rviz2</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
